Fixed broken layout for every screen resolution

--- a/src/app/main/component/shared/components/events-list-item/events-list-item-user.component.scss
+++ b/src/app/main/component/shared/components/events-list-item/events-list-item-user.component.scss
@@ -16,7 +16,6 @@
     align-items: center;
     justify-content: center;
     height: 192px;
-    position: relative;
 
     &-image {
       display: block;
@@ -80,18 +79,21 @@
   }
 
   &__content {
-    margin: 20px;
+    padding: 20px 10px;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 
     &__date-container {
       display: flex;
       font-size: 14px;
       padding-bottom: 2px;
+      width: 100%;
+      box-sizing: border-box;
 
       .clock {
-        width: 12px;
-        height: 12px;
+        width: 16px;
+        height: 16px;
         margin-right: 5px;
         align-self: center;
         background: url('src/assets/events-icons/clock.png') no-repeat center;
@@ -106,17 +108,36 @@
       }
     }
 
+    &__address-container {
+      p {
+        margin-bottom: 5px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+
+      @media (max-width: 1200px) {
+        max-height: 45px;
+
+        p {
+          font-size: 14px;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+      }
+    }
+
     &__status-container {
       font-size: 14px;
     }
 
     .title {
-      overflow: hidden;
-      word-wrap: break-word;
-      height: 90px;
-      text-overflow: ellipsis;
+      max-height: 60px;
 
       h3 {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
         font-family: var(--primary-font);
         font-weight: bold;
         font-size: 20px;
@@ -129,41 +150,52 @@
       display: flex;
       justify-content: space-between;
 
-      &-date {
-        display: flex;
-        align-items: center;
+      &-data {
+        max-width: 70%;
 
-        img {
-          width: 12px;
-          margin-right: 5px;
+        @media (max-width: 1200px) and (min-width: 768px) {
+          max-width: 50%;
         }
 
-        p {
-          font-size: 14px;
-          margin: 0;
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ellipsis;
-          width: 100%;
-        }
-      }
-
-      &-icon {
-        display: flex;
-        align-items: center;
-
-        img {
-          width: 12px;
-          margin-right: 5px;
+        @media (max-width: 400px) {
+          max-width: 50%;
         }
 
-        p {
-          font-size: 14px;
-          margin: 0;
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ellipsis;
-          width: 100%;
+        &-date {
+          display: flex;
+          align-items: center;
+          flex-direction: row;
+
+          img {
+            width: 12px;
+            margin-right: 5px;
+          }
+
+          p {
+            font-size: 14px;
+            margin: 0;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+          }
+        }
+
+        &-icon {
+          display: flex;
+          align-items: center;
+
+          img {
+            width: 12px;
+            margin: 0 5px 5px 0;
+          }
+
+          p {
+            font-size: 14px;
+            margin-bottom: 5px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+          }
         }
       }
     }
